@@ -1,6 +1,8 @@
 DIST stem-1.2.2_p20140718.tar.gz 1534015 SHA256 61c0aabd7d18cfd3ca89b05c8c8c066447d2b570ee4802956a4fba05ef5f9b85 SHA512 219d8293542cb61ce38d9a9269208847d81b9b94c0aeff8f1b3a3b71a550c2829414230709d4d5610d9ecf39af8ae1b5537a4398c6dd4930cc36777346412758 WHIRLPOOL 86c9335daf9331c355acfc545dcad2b0ae078b67b124f22c59532fde9dfa216a7578d9dff025cdd66f1b09935fae3ebd3bc4edccda3a307a39366134f2ba1b04
 DIST stem-1.3.0.tar.bz2 1481513 SHA256 770e370156e0e92a9862e4670ee3f4ac385742006e578608528ee16cbab9d416 SHA512 dea65d026a27985432b291614dc3c8da7a628fad945a755abb706177864edd387c8ea96cd8358af60825b342896d57ea1daa96365efd5156bf8885e7a7aa9714 WHIRLPOOL 1e3d9f800ed9670a347d41c565250a42e1a166e24c55dc3a0128cd3b2c5d9a8f0e926e73338a4cdd846997911c11db5e2fa98f2b7dd5a259da523951d8bf1626
+DIST stem-1.3.0_p20150414.tar.gz 1677096 SHA256 4bde897f7286fa0afab5d7bfc54136d1d088d1139e8a5bced6becdd6952d6469 SHA512 ba4b15dfe5e506d466469fee4c6a0ef4322b8de3ec9751550bd6b7394b606221f894c1dd826810a82ebc42af0d5cc0f6ea66a936f063e916cc54f49c22fb9d6c WHIRLPOOL da1723a496a2e02433117365dcd39eabf0ce388ac9c751745070a0565402a410b33626af5b8497009080fda9a7dbf6951b3f40988bc95fd15a9d599b51a87ade
 EBUILD stem-1.2.2_p20140718.ebuild 1077 SHA256 3b3b40a3b45471febd4c7ce371253b9d9213d4c620ebcf4336224e77d8f2e276 SHA512 cbae672abd3849a09126a63409e20c26e69b7561fe944485f7adb3351e9bbd257a6e976968dabed1bbbedd0191fdb9d77569305f62ce301abea55d49e09b75b5 WHIRLPOOL e50e3e0472640d4a80c511dfb302e774bc0973d3b8278a8fb732be6479288534b466a9f85f25353c0bc390063b05250ecfd3ae0b27082a708d0503d0ba2ebdb6
 EBUILD stem-1.3.0.ebuild 1132 SHA256 2b4d1dd108638da3c6d4786e77dd643f13fd068e7e1ff55c6d345c986a4662f7 SHA512 7508f3304c16887ba85ac965254fbe6b6013460aae5002e715ff278cbce7b98af3ccd4cad5611438724508cccb36a449ada5613ef6e9b8349e3c9ec06e14cfd4 WHIRLPOOL af1fa05a6c44ae250bb732530453028f8cbc4e37dfa81ebdef806140c649fb34109bb58a996da042d3a69f78380cd8ffa0b7abdc6fc6a0fbc3a25d815ebabc46
-MISC ChangeLog 1477 SHA256 17e1d62e4b49ee77e4cd2e80ab2776c48aec7ca82d6f31712bc79de312ba3d23 SHA512 3f4114aa087cb64caee91128410dbab8eba6d01418aec23a604160e399cf627df539e8bbf59e70d497bfa8a686d48f9885babe4fea42978eee4fff0890c1eb4f WHIRLPOOL 77e14dc3276b3afe2ded1437d35f35ac89113744e12e70740495a715217452d5f78e1190216ab9058ccf438f29f08d50c8bf073b886f673a87a592672fc6bae2
+EBUILD stem-1.3.0_p20150414.ebuild 1422 SHA256 8136e8046a2d557c594328c575d870077ed733674ef1e51ab6bd8f3c4aa2cdc2 SHA512 8832da5e1a61c33f4f95d2ddfb44018bf26ce04da410e95bc2c5fb1d7652389cd2bc13f3df212b74e8d5ad2f3e3a60551b3fb9ee33db1ab07491229c874dc975 WHIRLPOOL bded167393cd59b777df4863f51d3ef68be242ec6f84393d4d5e5bdd71cca0d96277f5d7e89d5fa091e59e523c4df61e1d3beab6eb09cf604abfb2e31e969160
+MISC ChangeLog 1635 SHA256 47695405e180e760cf0f9177c7a1a0510e050b4c1fb86b6840501f8cd7dddd9d SHA512 a5ea774336036e17db8d7e2b854b544848bb21a150814bd62feb16677b98853be69d00d94c6f8e31a394c128dc76e85d7a3a94ea3695f923818e7f1b6bf135d8 WHIRLPOOL 9e5d240e2710939f5230bf07a7b40d6eb66736e05d2ef0047adbbee6f4cbb67ea8e71977dcf617d0259b308fe384b267c34199b18bf0e5cbfc24ce6fac4a092d
 MISC metadata.xml 330 SHA256 087ea49bd54a0ea3232bdb174caf9f6f3c47c02eff4e251ae44b8a77c19afc70 SHA512 66aaa25b72464537676f71f86963d764b03c1bf41067009b10fe9180419570442515dfef808b241eb2f64c10fbfaa42ed0bde587ba1921bb994f5ac25116ce27 WHIRLPOOL df36f1b32cb272e7de01491f24ed19e5840fe443dd19317122f22e7d5062e7a3ae831b079f7087666fc1befe8b71b61759737e0f9821dd9648feb67fb6255d6f
