@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/stem
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/stem/ChangeLog,v 1.9 2014/12/22 22:43:08 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/stem/ChangeLog,v 1.10 2015/04/16 22:28:42 mrueg Exp $
+
+*stem-1.3.0_p20150414 (16 Apr 2015)
+
+  16 Apr 2015; Manuel Rüger <mrueg@gentoo.org> +stem-1.3.0_p20150414.ebuild:
+  Add new snapshot with python3 support.
 
 *stem-1.3.0 (22 Dec 2014)
 
